mlirfuzz/crashed/temp551924046505760529152.mlir-7382132763997506196.log
generated/temp551924046505760529152.mlir:123:14: error: Test iterating `int64_t`: unable to iterate type
      %129 = vector.broadcast %cst_2 : f16 to vector<8xf16>
             ^
generated/temp551924046505760529152.mlir:123:14: note: see current operation: %0 = "arith.constant"() <{value = dense<2.931200e+04> : vector<8xf16>}> : () -> vector<8xf16>
generated/temp551924046505760529152.mlir:123:14: error: Test iterating `uint64_t`: unable to iterate type
      %129 = vector.broadcast %cst_2 : f16 to vector<8xf16>
             ^
generated/temp551924046505760529152.mlir:123:14: note: see current operation: %0 = "arith.constant"() <{value = dense<2.931200e+04> : vector<8xf16>}> : () -> vector<8xf16>
generated/temp551924046505760529152.mlir:123:14: error: Test iterating `APInt`: unable to iterate type
      %129 = vector.broadcast %cst_2 : f16 to vector<8xf16>
             ^
generated/temp551924046505760529152.mlir:123:14: note: see current operation: %0 = "arith.constant"() <{value = dense<2.931200e+04> : vector<8xf16>}> : () -> vector<8xf16>
mlir-opt: /home/jacob/projects/MLIRSmith/llvm/include/llvm/Support/Casting.h:572: decltype(auto) llvm::cast(From&) [with To = mlir::IntegerAttr; From = mlir::Attribute]: Assertion `isa<To>(Val) && "cast<Ty>() argument of incompatible type!"' failed.
PLEASE submit a bug report to https://github.com/llvm/llvm-project/issues/ and include the crash backtrace.
Stack dump:
0.	Program arguments: ../build/bin/mlir-opt --test-rewrite-dynamic-op --test-pdll-pass --test-spirv-module-combiner --convert-async-to-llvm --mlir-print-op-on-diagnostic --test-func-set-type --convert-gpu-to-rocdl --show-dialects --test-type-interfaces --test-elements-attr-interface generated/temp551924046505760529152.mlir
Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):
0  mlir-opt        0x000055d318857bdb llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) + 59
1  mlir-opt        0x000055d3188549cc
2  libpthread.so.0 0x00007fe61cbf5980
3  libc.so.6       0x00007fe61b822e87 gsignal + 199
4  libc.so.6       0x00007fe61b8247f1 abort + 321
5  libc.so.6       0x00007fe61b8143fa
6  libc.so.6       0x00007fe61b814472
7  mlir-opt        0x000055d31ae28782
8  mlir-opt        0x000055d31ae2da74
9  mlir-opt        0x000055d31ae2f4fc
10 mlir-opt        0x000055d31ae286a9
11 mlir-opt        0x000055d31ae2e505
12 mlir-opt        0x000055d31afcf301 mlir::detail::OpToOpPassAdaptor::run(mlir::Pass*, mlir::Operation*, mlir::AnalysisManager, bool, unsigned int) + 1297
13 mlir-opt        0x000055d31afd0223
14 mlir-opt        0x000055d31afd08c1 mlir::PassManager::run(mlir::Operation*) + 1153
15 mlir-opt        0x000055d31afc0efc
16 mlir-opt        0x000055d31afc28b5
17 mlir-opt        0x000055d31afc2a71
18 mlir-opt        0x000055d31b0c8260 mlir::splitAndProcessBuffer(std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::function_ref<mlir::LogicalResult (std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::raw_ostream&)>, llvm::raw_ostream&, bool, bool) + 96
19 mlir-opt        0x000055d31afbbbc9 mlir::MlirOptMain(llvm::raw_ostream&, std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, mlir::DialectRegistry&, mlir::MlirOptMainConfig const&) + 185
20 mlir-opt        0x000055d31afc2d9a mlir::MlirOptMain(int, char**, llvm::StringRef, mlir::DialectRegistry&) + 746
21 mlir-opt        0x000055d3187aa0c5 main + 165
22 libc.so.6       0x00007fe61b805c87 __libc_start_main + 231
23 mlir-opt        0x000055d31882b95a _start + 42
Aborted
